--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
     <script type="text/javascript" src="js/responsivemobilemenu.js"></script>
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <div class="rmm minimal">
@@ -36,13 +35,13 @@
 					<div class="img-banner">
 						<div class="img-banner-info">
 							<h1>Shop Smarter</h1>
-							<h3>Jiffi delivers all your favorite deals from your retailers right to your phone</h3>
+							<h3>Jiffi is your location aware personal shopping companion which helps you to discover & connect with your favourite brands.</h3>
 							<div class="get-app"><a href="https://play.google.com/store/apps/details?id=com.jiffi.deals.foryou">
                                 <img alt="Get it on Google Play" src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png"/></a>
                             </div>
 					    </div>
 						<div class="img-banner-pic">
-							 <img src="images/screen1.png" align="" class="screen"/>
+							 <img src="images/screen.png" align="" class="screen"/>
 						   </div>
 						<div class="clear"> </div>
 					</div>
@@ -59,36 +58,47 @@
 				</div>
 				<p>Jiffi is a Bangalore based start up, launched in 2015.<br>Our goal is to be your very own personal shopping companion helping you to discover and connect with your favourite brands.<br>We still are in the process of onboarding your favourite brands. In case if we have missed out on any, please write to <a href="mailto:cs@gojiffi.com">cs@gojiffi.com</a></p>
 				<div class="clear"><br> </div>
-		</div>
-	    </div> 
-	</div>  
-	  <!-- Download Button  -->
-	  <!-- End Main -->
+		   </div>
+		 </div> 
+	</div>
+	<!-- End Main -->
 	   
-	  <!-- Footer -->
-         <div class="footer" id="section-5">
-    	   <div class="wrap">
-              <div class="footer-top">
-              	<img class="logo-footer" src="images/title.png" alt="Jiffi" /> 
-				
-			  </div> 
-			  <div class="footerbottom">
-			     <div class="social" style="padding-bottom: 40px;">
-            	            	<a href="" class="facebook" target="_blank"></a>
-                                <a href="" class="twitter" target="_blank"></a>
-                                <a href="" class="pintrest" target="_blank"></a>   
-				<a href="" class="instagram" target="_blank"></a>
-                </div>
-			  <div class="footermenu">
-                <ul id="menu-footer_menu" class="">
-					<li id="menu-item-68" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-68"><a href="">We are hiring</a></li>
-					<li id="menu-item-70" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-5 current_page_item menu-item-70"><a href="#top">Home</a></li>
-					<li id="menu-item-69" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-69"><a href="#section-2">About Us</a></li>
-					<li id="menu-item-63" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-63"><a href="">Contact Us</a></li>
-				</ul>
-			  </div>
-           </div>
-     </div>
-	 </div>
-  </body>
+		<!-- Footer -->
+        <div class="footer" id="section-5">
+			<div class="wrap">
+				<div class="footer-top">
+					<img class="logo-footer" src="images/title.png" alt="Jiffi" /> 
+				</div> 
+				<div class="footerbottom">
+					<div class="social" style="padding-bottom: 40px;">
+						<a href="" class="facebook" target="_blank"></a>
+                        <a href="" class="twitter" target="_blank"></a>
+                        <a href="" class="pintrest" target="_blank"></a>   
+						<a href="" class="instagram" target="_blank"></a>
+					</div>
+					<div class="footermenu">
+						<ul id="menu-footer_menu" class="">
+							<li id="menu-item-68" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-68"><a href="">We are hiring</a></li>
+							<li id="menu-item-70" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-5 current_page_item menu-item-70"><a href="#top">Home</a></li>
+							<li id="menu-item-69" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-69"><a href="#section-2">About Us</a></li>
+							<li id="menu-item-63" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-63"><a href="">Contact Us</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script type="text/javascript">
+			WebFontConfig = {
+			google: { families: [ 'Lato:400,700:latin' ] }
+			};
+			(function() {
+			var wf = document.createElement('script');
+			wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+			'://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+			wf.type = 'text/javascript';
+			wf.async = 'true';
+			var s = document.getElementsByTagName('script')[0];
+			s.parentNode.insertBefore(wf, s);
+			})(); </script>
+	</body>
 </html>
