--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 				</div> 
 				<div class="footerbottom">
 					<div class="social" style="padding-bottom: 40px;">
-						<a href="" class="facebook" target="_blank"></a>
-                        <a href="" class="twitter" target="_blank"></a>
+						<a href="https://www.facebook.com/pages/Jiffi/676763709122301" class="facebook" target="_blank"></a>
+                        <a href="https://twitter.com/gojiffi" class="twitter" target="_blank"></a>
                         <a href="" class="pintrest" target="_blank"></a>   
 						<a href="" class="instagram" target="_blank"></a>
 					</div>
