--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
    <div class="header" id="top">	
     <div class="header-top">
        <div class="wrap"> 
-	         <div class="logo">
+	         <div class="logo-img">
+				<a href="index.html"><img class="logo" src="images/logo.png" alt="Jiffi"/></a>
+			 </div>
+			 <div class="logo">
 				<a href="index.html"><img src="images/title.png" alt="Jiffi" /></a>
 			 </div>
 			 <div class="cssmenu">
