Nav theme changed
Navbar colour scheme updated

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<a href="index.html"><img class="logo" src="images/logo.png" alt="Jiffi"/></a>
 			 </div>
 			 <div class="logo">
-				<a href="index.html"><img src="images/title.png" alt="Jiffi" /></a>
+				<a href="index.html"><img src="images/title3.png" alt="Jiffi" /></a>
 			 </div>
 			 <div class="cssmenu">
 				<ul id="nav">
