--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="rmm minimal">
         <ul>
             <li><a href='#section-2'>About</a></li>
-            <li><a href='#section-2'>Contact Us</a></li> 
+            <li><a href='#form'>Contact Us</a></li> 
        </ul>
 </div>
    <div class="header" id="top">	
@@ -47,7 +47,7 @@
 			 <div class="cssmenu">
 				<ul id="nav">
 					  <li><a href="#section-2" class="scroll">About</a></li>
-				     <li><a href="#" class="scroll">Contact Us</a></li>
+				     <li><a href="#form" class="scroll">Contact Us</a></li>
 				</ul>
 		    </div>
 		    <div class="clear"></div>
@@ -85,7 +85,7 @@
 		 </div> 
 	</div>
 	<!-- End Main -->
-	<div class="contact">
+	<div class="contact" id="form">
 		<p class="form">Contact Us</p>
 		<form method="post" action="//formspree.io/cs@gojiffi.com">
 		<!--change-->
@@ -125,7 +125,7 @@
 						<ul id="menu-footer_menu" class="">
 							<li id="menu-item-70" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-5 current_page_item menu-item-70"><a href="#top">Home</a></li>
 							<li id="menu-item-69" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-69"><a href="#section-2">About Us</a></li>
-							<li id="menu-item-63" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-63"><a href="#section-2">Contact Us</a></li>
+							<li id="menu-item-63" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-63"><a href="#form">Contact Us</a></li>
 						</ul>
 					</div>
 				</div>
