Social Icons updated

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 					<div class="social" style="padding-bottom: 40px;">
 						<a href="https://www.facebook.com/pages/Jiffi/676763709122301" class="facebook" target="_blank"></a>
                         <a href="https://twitter.com/gojiffi" class="twitter" target="_blank"></a>
-                        <a href="" class="pintrest" target="_blank"></a>   
-						<a href="" class="instagram" target="_blank"></a>
+                        <!--a href="" class="pintrest" target="_blank"></a>   
+						<a href="" class="instagram" target="_blank"></a-->
 					</div>
 					<div class="footermenu">
 						<ul id="menu-footer_menu" class="">
