Popup content updated

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 	<link rel="stylesheet" href="css/contact.css" type="text/css"/>
 </head>
 <body>
+	<div id="popup">
+		<a href="#" onclick="document.getElementById('popup').style.display='none';" id="close_popup"><div id="blanket"></div></a>
+		<div id="popupdiv">
+			<img id="deal" src="images/deals.png"></img>
+			<a href="https://play.google.com/store/apps/details?id=com.jiffi.deals.foryou"><img id="getapp" src="images/gp.png"></img></a>
+		</div>
+	</div>
     <div class="rmm minimal">
         <ul>
             <li><a href='#section-2'>About</a></li>
